Added playpass sponsor

--- a/app/index.hbr.html
+++ b/app/index.hbr.html
@@ -294,6 +294,7 @@
                 <a href="http://www.pluralsight.com/training" target="_blank"><img src="images/sponsors/pluralsight.jpg" alt="pluralsight"/></a>
             </div>
             <div class="col5" align="center">
+                <a href="http://www.playpass.be" target="_blank"><img src="images/sponsors/playpass.jpg" alt="playpass"/></a>
             </div>
             <div class="col5" align="center">
             </div>
