Enabled "Program" header menu

--- a/app/index.html
+++ b/app/index.html
@@ -109,14 +109,13 @@
             <nav class="" ng-controller="LoginCtrl" ng-cloak="ng-cloak">
                 <ul>
                     <li><a href="#/">Home</a></li>
-                    <li><a href="/dv13-speakers.html">Devoxxians</a></li>
-                    <!-- <li class="submenu subleft">
+                    <li class="submenu subleft">
                         <a href="#">Program</a>
                         <ul>
                             <li><a href="/dv13-schedule.html">Schedule</a></li>
                             <li><a href="/dv13-speakers.html">Devoxxians</a></li>
                         </ul>
-                    </li> -->
+                    </li>
                     <li class="submenu subright">
                         <a>Practical</a>
                         <ul>
