Updated header text

--- a/app/scheduleBody.hbr.html
+++ b/app/scheduleBody.hbr.html
@@ -5,7 +5,7 @@
 			<div class="col9">
 				
 				<h1>Schedule {{eventDetails.name}}</h1>
-				<p>We'll release the Devoxx schedule mid-September.</p>
+				<p>You can expect additional speakers and topics in the coming weeks.</p>
 				
 			</div>	
 			<div class="col10 push1">
