--- a/app/index.html
+++ b/app/index.html
@@ -169,61 +169,35 @@
                         </ul>
                     </li>
 
-                    <!--<li class="popup search">-->
-                        <!--<a href="#">Search</a>-->
-                        <!--<ul>-->
-                            <!--<li>-->
-                                <!--<div class="popup">-->
-                                    <!--<form>-->
-                                        <!--<input type="text" name="search" value="" placeholder="search..."/>-->
-                                    <!--</form>-->
+                    <li class="popup search">
+                        <a href="#">Search</a>
+                        <ul>
+                            <li>
+                                <div class="popup">
+                                    <form id="searchForm" >
+                                        <input id="search" type="text" name="text" value="" placeholder="search..."/>
+                                    </form>
 
-                                    <!--<ol>-->
-                                        <!--<li>-->
-                                            <!--<a href="#">-->
-                                                <!--<img src="images_dummy/search_icon1_dummy.jpg" alt=""/>-->
+                                    <script>
+                                        $.ajaxSetup ({
+                                            cache: false
+                                        });
 
-                                                <!--<div class="title">Lorum ipsum dolor</div>-->
-                                                <!--<div class="subtitle">Mobi leo risus</div>-->
-                                            <!--</a>-->
-                                        <!--</li>-->
-                                        <!--<li>-->
-                                            <!--<a href="#">-->
-                                                <!--<img src="images_dummy/search_icon2_dummy.jpg" alt=""/>-->
+                                        $("#searchForm").keypress(function(e) {
+                                            var code = (e.keyCode ? e.keyCode : e.which);
+                                            if (code == 13) {
+                                                var loadUrl = "https://cfp.devoxx.com/v2/search/event/10?text=" + $("#search").val();
+                                                $("#result").load(loadUrl);
+                                            }
+                                        });
+                                    </script>
 
-                                                <!--<div class="title">Lorum ipsum dolor</div>-->
-                                                <!--<div class="subtitle">Mobi leo risus</div>-->
-                                            <!--</a>-->
-                                        <!--</li>-->
-                                        <!--<li>-->
-                                            <!--<a href="#">-->
-                                                <!--<img src="images_dummy/search_icon2_dummy.jpg" alt=""/>-->
-
-                                                <!--<div class="title">Lorum ipsum dolor</div>-->
-                                                <!--<div class="subtitle">Mobi leo risus</div>-->
-                                            <!--</a>-->
-                                        <!--</li>-->
-                                        <!--<li>-->
-                                            <!--<a href="#">-->
-                                                <!--<img src="images_dummy/search_icon1_dummy.jpg" alt=""/>-->
-
-                                                <!--<div class="title">Lorum ipsum dolor</div>-->
-                                                <!--<div class="subtitle">Mobi leo risus</div>-->
-                                            <!--</a>-->
-                                        <!--</li>-->
-                                        <!--<li>-->
-                                            <!--<a href="#">-->
-                                                <!--<img src="images_dummy/search_icon2_dummy.jpg" alt=""/>-->
-
-                                                <!--<div class="title">Lorum ipsum dolor</div>-->
-                                                <!--<div class="subtitle">Mobi leo risus</div>-->
-                                            <!--</a>-->
-                                        <!--</li>-->
-                                    <!--</ol>-->
-                                <!--</div>-->
-                            <!--</li>-->
-                        <!--</ul>-->
-                    <!--</li>-->
+                                    <div id="result">
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
         </div>
