Added Microsoft as platinum partner

--- a/app/index.html
+++ b/app/index.html
@@ -267,10 +267,13 @@
                 <a href="https://developers.google.com" target="_blank"><img src="images/sponsors/google.png" alt="Google"/></a>
             </div>
             <div class="col5" align="center">
-                <a href="http://www.jetbrains.com" target="_blank"><img src="images/sponsors/jetbrains.png" alt="JetBrains"/></a>
+                <a href="http://www.windowsazure.com/en-us/" target="_blank"><img src="images/sponsors/microsoft.png" alt="Microsoft"/></a>
             </div>
         </div>
         <div class="row">
+            <div class="col5" align="center">
+                <a href="http://www.jetbrains.com" target="_blank"><img src="images/sponsors/jetbrains.png" alt="JetBrains"/></a>
+            </div>
             <div class="col5" align="center">
                 <a href="https://www.smals.be/nl" target="_blank"><img src="images/sponsors/smals.png" alt="Smals"/></a>
             </div>
@@ -280,11 +283,11 @@
             <div class="col5" align="center">
                 <a href="http://www.hello2morrow.com/" target="_blank"><img src="images/sponsors/hello2morrow.png" alt="Hello2Morrow"/></a>
             </div>
+        </div>
+        <div class="row">
             <div class="col5" align="center">
                 <a href="http://www.vaadin.com/" target="_blank"><img src="images/sponsors/vaadin.png" alt="Vaadin"/></a>
             </div>
-        </div>
-        <div class="row">
             <div class="col5" align="center">
                 <a href="http://www.aca-it.be" target="_blank"><img src="images/sponsors/aca.png" alt="ACA IT solutions"/></a>
             </div>
@@ -294,11 +297,11 @@
             <div class="col5" align="center">
                 <a  href="http://www.scm-manager.com" target="_blank"><img src="images/sponsors/triology.png" alt="Triology"/></a>
             </div>
+        </div>
+        <div class="row">
             <div class="col5" align="center">
                 <a href="http://www.eclipse.org/org/foundation/" target="_blank"><img src="images/sponsors/eclipse.png" alt="Eclipse"/></a>
             </div>
-        </div>
-        <div class="row">
             <div class="col5" align="center">
                 <a href="http://www.typesafe.com" target="_blank"><img src="images/sponsors/typesafe.png" alt="Typesafe"/></a>
             </div>
@@ -308,11 +311,11 @@
             <div class="col5" align="center">
                 <a href="http://zeroturnaround.com" target="_blank"><img src="images/sponsors/zeroturnaround.png" alt="ZeroTurnaround"/></a>
             </div>
+        </div>
+        <div class="row">
             <div class="col5" align="center">
                 <a href="http://www.atalasoft.com/" target="_blank"><img src="images/sponsors/atalasoft.png" alt="Atalasoft"/></a>
             </div>
-        </div>
-        <div class="row">
             <div class="col5" align="center">
                 <a href="http://xplore.be/" target="_blank"><img src="images/sponsors/xplore.png" alt="XPLORE"/></a>
             </div>
