Added Xebia as sponsor

--- a/app/index.hbr.html
+++ b/app/index.hbr.html
@@ -266,7 +266,16 @@
             <div class="col5" align="center">
                 <a href="http://www.playpass.be" target="_blank"><img src="images/sponsors/playpass.jpg" alt="playpass"/></a>
             </div>
-            <div class="col5" align="center">
+            <div class="row">
+                <div class="col5" align="center">
+                    <a href="http://www.xebialabs.com/" target="_blank"><img src="images/sponsors/xebia.png" alt="XebiaLabs"/></a>
+                </div>
+                <div class="col5" align="center">
+                </div>
+                <div class="col5" align="center">
+                </div>
+                <div class="col5" align="center">
+                </div>
             </div>
         </div>
     </div>
