--- a/app/index.html
+++ b/app/index.html
@@ -325,6 +325,15 @@
             <div class="col5" align="center">
                 <a href="http://www.playpass.be" target="_blank"><img src="images/sponsors/playpass.jpg" alt="playpass"/></a>
             </div>
+        </div>
+        <div class="row">
+            <div class="col5" align="center">
+                <a href="http://www.xebialabs.com/" target="_blank"><img src="images/sponsors/xebia.png" alt="XebiaLabs"/></a>
+            </div>
+            <div class="col5" align="center">
+            </div>
+            <div class="col5" align="center">
+            </div>
             <div class="col5" align="center">
             </div>
         </div>
