Added Faro and NAO

--- a/app/index.hbr.html
+++ b/app/index.hbr.html
@@ -271,8 +271,10 @@
                     <a href="http://www.xebialabs.com/" target="_blank"><img src="images/sponsors/xebia.png" alt="XebiaLabs"/></a>
                 </div>
                 <div class="col5" align="center">
+                    <a href="http://www.faro.com/nl-nl/home" target="_blank"><img src="images/sponsors/faro.jpg" alt="FARO"/></a>
                 </div>
                 <div class="col5" align="center">
+                    <a href="http://www.aldebaran-robotics.com/en/" target="_blank"><img src="images/sponsors/aldebaran.jpg" alt="Aldebaran Robotics"/></a>
                 </div>
                 <div class="col5" align="center">
                 </div>
