Added Pivotal as sponsor

--- a/app/index.html
+++ b/app/index.html
@@ -261,7 +261,7 @@
                         src="images/sponsors/oracle.png" alt="Oracle"/></a>
             </div>
             <div class="col5" align="center">
-                <a href="http://www.wildfly.org" target="_blank"><img src="images/sponsors/jboss.png" alt="JBoss"/></a>
+                <a href="http://www.wildfly.org" target="_blank"><img src="images/sponsors/jboss.jpg" alt="JBoss"/></a>
             </div>
             <div class="col5" align="center">
                 <a href="https://developers.google.com" target="_blank"><img src="images/sponsors/google.png" alt="Google"/></a>
@@ -337,6 +337,7 @@
                 <a href="http://www.aldebaran-robotics.com/en/" target="_blank"><img src="images/sponsors/aldebaran.jpg" alt="Aldebaran Robotics"/></a>
             </div>
             <div class="col5" align="center">
+                <a href="http://www.gopivotal.com/" target="_blank"><img src="images/sponsors/pivotal.jpg" alt="Pivotal"/></a>
             </div>
         </div>
     </div>
