Added Azul Systems as sponsor

--- a/app/index.html
+++ b/app/index.html
@@ -340,6 +340,17 @@
                 <a href="http://www.gopivotal.com/" target="_blank"><img src="images/sponsors/pivotal.jpg" alt="Pivotal"/></a>
             </div>
         </div>
+        <div class="row">
+            <div class="col5" align="center">
+                <a href="http://www.azulsystems.com/" target="_blank"><img src="images/sponsors/azul.jpg" alt="Azul Systems"/></a>
+            </div>
+            <div class="col5" align="center">
+            </div>
+            <div class="col5" align="center">
+            </div>
+            <div class="col5" align="center">
+            </div>
+        </div>
     </div>
 </div>
 
