Provide event config in static pages

--- a/app/index.hbr.html
+++ b/app/index.hbr.html
@@ -26,6 +26,14 @@
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
 
+    <script type="text/javascript">
+        window.DEVOXX_CONFIG = {
+            url: "{{this.event.url}}",
+            id: {{this.event.id}},
+            key: "{{this.event.key}}"
+        };
+    </script>
+
     <!-- TODO: scripts to bottom of the page (performance) -->
     <!--[if lt IE 9]>
     <!-- build:js scripts/scripts-ie.js -->
