--- a/app/index.hbr.html
+++ b/app/index.hbr.html
@@ -103,7 +103,7 @@
                         </ul>
                     </li>
                     <li class="btn hide_mobile">
-                    <a href="https://regbe.devoxx.com/public#DV13">Buy tickets</a>
+                    <a href="https://regbe.devoxx.com/public#DV13">Sold Out</a>
                     </li>
 
                     <li class="popup search">
