--- a/app/index.html
+++ b/app/index.html
@@ -126,7 +126,7 @@
                         </ul>
                     </li>
                     <li class="btn hide_mobile">
-                    <a href="https://regbe.devoxx.com/public#DV13">Buy tickets</a>
+                    <a href="https://regbe.devoxx.com/public#DV13">SOLD OUT</a>
                     </li>
                     <li class="btn popup login btn_grey" ng-hide="model.currentUser()" ng-class="{'open':model.loginRequested}">
                         <a>Login</a>
