--- a/app/index.hbr.html
+++ b/app/index.hbr.html
@@ -298,6 +298,7 @@
                     <a href="http://www.azulsystems.com/" target="_blank"><img src="images/sponsors/azul.jpg" alt="Azul Systems"/></a>
                 </div>
                 <div class="col5" align="center">
+                    <a href="http://www.atlassian.com/" target="_blank"><img src="images/sponsors/atlassian.jpg" alt="Atlassian"/></a>
                 </div>
                 <div class="col5" align="center">
                 </div>
