--- a/app/index.html
+++ b/app/index.html
@@ -348,6 +348,7 @@
                 <a href="http://www.atlassian.com/" target="_blank"><img src="images/sponsors/atlassian.jpg" alt="Atlassian"/></a>
             </div>
             <div class="col5" align="center">
+                <a href="http://www.datastax.com/" target="_blank"><img src="images/sponsors/datastax.jpg" alt="DataStax"/></a>
             </div>
             <div class="col5" align="center">
             </div>
