--- a/app/index.hbr.html
+++ b/app/index.hbr.html
@@ -44,6 +44,8 @@
 
     <!-- build:js scripts/scriptsstatic.js -->
     <script src="components/jquery/jquery.js"></script>
+    <script src="components/jquery.cookie/jquery.cookie.js"></script>
+    <script src="components/jquery-local-storage/jquery.local-storage.js"></script>
     <script src="components/modernizr/modernizr.js"></script>
     <script src="components/bxslider-4/jquery.bxslider.js"></script>
     <script src="components/meanMenu/jquery.meanmenu.js"></script>
@@ -51,6 +53,7 @@
     <script src="components/isotope/jquery.isotope.js"></script>
     <script src="components/moment/moment.js"></script>
     <script src="scripts/main360.js"></script>
+    <script src="scripts/favorite.js"></script>
     <!-- endbuild -->
 
     <script>
