Revert "Added meta description content"
This reverts commit 624643a45d5a04fff71421ac67faf263da841581.

--- a/app/index.hbr.html
+++ b/app/index.hbr.html
@@ -8,24 +8,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>DEVOXX 2013, November 11th - 15th - Antwerp/Belgium</title>
-
-    {{#if isSpeakers}}
-        <meta name="description" content="Devoxx 2013 Speakers">
-    {{/if}}
-    {{#if isSchedule}}
-        <meta name="description" content="Devoxx 2013 Schedule">
-    {{/if}}
-    {{#if isSpeaker}}
-        <meta name="description" content="{{title}}">
-    {{/if}}
-    {{#if isAgreement}}
-        <meta name="description" content="Devoxx agreement">
-    {{/if}}
-    {{#if isThankyou}}
-        <meta name="description" content="Thank you">
-    {{/if}}
-
+    <title>DEVOXX</title>
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     
