--- a/app/scheduleBody.hbr.html
+++ b/app/scheduleBody.hbr.html
@@ -6,8 +6,10 @@
 				
 				<h1>Schedule {{eventDetails.name}}</h1>
 				<p>The Devoxx schedule is now complete.</p>
-				
-			</div>	
+
+                <p><a href="https://itunes.apple.com/be/app/devoxx/id477725101" class="btn appStore"></a></p>
+
+            </div>
 			<div class="col10 push1">
 			
 				<div class="filtertracks">
