--- a/app/speakersBody.hbr.html
+++ b/app/speakersBody.hbr.html
@@ -7,7 +7,8 @@
             <div class="col9">
                 
                 <h1>Speakers {{eventDetails.name}}</h1>
-                <p>First batch of Rock stars and passionate community members that we've lined-up for you.  Expect many more in the coming weeks!</p>
+
+                <p><a href="https://itunes.apple.com/be/app/devoxx/id477725101" class="btn appStore"></a></p>
                 
             </div>  
             <div class="col10 push1">
