Added missing apps for iOS schedule icon and link

--- a/app/scheduleBody.hbr.html
+++ b/app/scheduleBody.hbr.html
@@ -2,7 +2,7 @@
 	<div class="grid">
 	
 		<div class="row">	
-			<div class="col9">
+			<div class="col9 apps">
 				
 				<h1>Schedule {{eventDetails.name}}</h1>
 				<p>The Devoxx schedule is now complete.</p>
