--- a/app/speakersBody.hbr.html
+++ b/app/speakersBody.hbr.html
@@ -4,7 +4,7 @@
     <div class="grid">
     
         <div class="row">   
-            <div class="col9">
+            <div class="col9 apps">
                 
                 <h1>Speakers {{eventDetails.name}}</h1>
 
