feat(schedule): add favorite buttons in speaker page too

--- a/app/speakerBody.hbr.html
+++ b/app/speakerBody.hbr.html
@@ -68,7 +68,7 @@
             
                 <p>{{nlbr summary}}</p>
 
-                <a href="javascript:void(0)" class="btn" id="addToFavorites" style="display: none"></a> <br><br>
+                <a href="javascript:void(0)" class="btn" id="addToFavorites{{id}}" style="display: none"></a> <br><br>
                 
                 {{#if parleysIds}}
                 <iframe class="parleysEmbed" type="text/html" width="420" height="220" mozallowfullscreen="true" webkitallowfullscreen="true" src="http://parleys.com/share.html#play/{{parleysIds}}" frameborder="0">&amp;lt;br /&amp;gt;</iframe>
@@ -179,6 +179,6 @@
         }, 500);
     }
 
-    managePresentationFavorite(presId);
+    manageFavoritesLinks(presId);
 
 </script>
