--- a/app/index.hbr.html
+++ b/app/index.hbr.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>DEVOXX</title>
-    <meta name="description" content="">
+    <meta name="description" content="Devoxx conference schedule and speakers">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     
