Support some schema.org tags for SEO and social sharing

--- a/app/speakerBody.hbr.html
+++ b/app/speakerBody.hbr.html
@@ -91,7 +91,7 @@
                     
                     <div class="links">                        
                         <h4><span itemprop="name">{{firstName}} {{lastName}}</span> {{#if tweethandle}}
-                        <a href="http://twitter.com/{{tweethandle}}" class="btn_twitter" itemprop="nickname">Twitter</a>{{/if}}
+                        <a href="http://twitter.com/{{tweethandle}}" class="btn_twitter" itemprop="nickname">{{tweethandle}}</a>{{/if}}
                         </h4>                                                                   
                     </div>                    
                     <p itemprop="description">{{nlbr bio}}</p>
