Added Android app

--- a/app/speakersBody.hbr.html
+++ b/app/speakersBody.hbr.html
@@ -8,7 +8,10 @@
                 
                 <h1>Speakers {{eventDetails.name}}</h1>
 
-                <p><a href="https://itunes.apple.com/be/app/devoxx/id477725101" class="btn appStore"></a></p>
+                <p>
+                    <a href="https://play.google.com/store/apps/details?id=be.idamediafoundry.android.devoxx" class="btn googleStore"></a>
+                    <a href="https://itunes.apple.com/be/app/devoxx/id477725101" class="btn appStore"></a>
+                </p>
                 
             </div>  
             <div class="col10 push1">
