--- a/app/scheduleBody.hbr.html
+++ b/app/scheduleBody.hbr.html
@@ -2,12 +2,15 @@
 	<div class="grid">
 	
 		<div class="row">	
-			<div class="col9 apps">
+			<div class="col11 apps">
 				
 				<h1>Schedule {{eventDetails.name}}</h1>
-				<p>The Devoxx schedule is now complete.</p>
+				<p>Download our schedule apps to make the best out of your Devoxx experience!</p>
 
-                <p><a href="https://itunes.apple.com/be/app/devoxx/id477725101" class="btn appStore"></a></p>
+                <p>
+                    <a href="https://play.google.com/store/apps/details?id=be.idamediafoundry.android.devoxx" class="btn googleStore"></a>
+                    <a href="https://itunes.apple.com/be/app/devoxx/id477725101" class="btn appStore"></a>
+                </p>
 
             </div>
 			<div class="col10 push1">
