New schedule header text

--- a/app/scheduleBody.hbr.html
+++ b/app/scheduleBody.hbr.html
@@ -2,10 +2,11 @@
 	<div class="grid">
 	
 		<div class="row">	
-			<div class="col11 apps">
+			<div class="col9 apps">
 				
 				<h1>Schedule {{eventDetails.name}}</h1>
-				<p>Download our schedule apps to make the best out of your Devoxx experience!</p>
+				<p>The best Devoxx experience?</p>
+                <p>Download and use our mobile schedule apps!</p>
 
                 <p>
                     <a href="https://play.google.com/store/apps/details?id=be.idamediafoundry.android.devoxx" class="btn googleStore"></a>
