--- a/app/cinemawall.html
+++ b/app/cinemawall.html
@@ -11,9 +11,11 @@
     <!-- TODO add local resources -->
     <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css'>
 
-    <!-- build:css styles/all.css -->
+    <!-- build:css styles/tweetwall-keyframes.css -->
     <link rel="stylesheet" href="styles/keyframes-schedule.css">
     <link rel="stylesheet" href="styles/keyframes-tweets.css">
+    <!-- endbuild -->
+    <!-- build:css(.tmp) styles/tweetwall-less.css -->
     <link rel="stylesheet" href="styles/wall.css">
     <!-- endbuild -->
 
@@ -27,7 +29,7 @@
 
     <script src="config.js"></script>
 
-    <!-- build:js scripts/scripts.js -->
+    <!-- build:js scripts/tweetwall.js -->
     <script src="components/jquery/jquery.js"></script>
     <script src="components/underscore/underscore-min.js"></script>
     <script src="components/unstable-angular-complete/angular.js"></script>
