--- a/app/scheduleBody.hbr.html
+++ b/app/scheduleBody.hbr.html
@@ -46,7 +46,7 @@
 			
 				<ul>
 					<li>
-						<a href="#" class="button selected dataday" id="day-1Button">Monday</a>
+						<a href="#" class="button dataday" id="day-1Button">Monday</a>
 					</li>
 					<li>
 						<a href="#" class="button selected dataday" id="day-2Button">Tuesday</a>
