Hide monday by default

--- a/app/scheduleBody.hbr.html
+++ b/app/scheduleBody.hbr.html
@@ -75,7 +75,7 @@
 <div id="sheduleDays" class="area lightgrey">
 
 	
-	<div class="talks trackFilter" data-day="day-1">
+	<div class="talks trackFilter" data-day="day-1" style="display: none;">
 	
 		<div class="head">			
 			<div class="grid">
