--- a/app/scheduleBody.hbr.html
+++ b/app/scheduleBody.hbr.html
@@ -49,7 +49,7 @@
 						<a href="#" class="button dataday" id="day-1Button">Monday</a>
 					</li>
 					<li>
-						<a href="#" class="button selected dataday" id="day-2Button">Tuesday</a>
+						<a href="#" class="button dataday" id="day-2Button">Tuesday</a>
 					</li>
 					<li>
 						<a href="#" class="button selected dataday" id="day-3Button">Wednesday</a>
@@ -109,7 +109,7 @@
 	</div>
 
 
-	<div class="talks trackFilter" data-day="day-2">
+	<div class="talks trackFilter" data-day="day-2" style="display: none;">
 	
 		<div class="head">
 			<div class="grid">
@@ -142,7 +142,7 @@
 	</div>
 
 
-	<div class="talks trackFilter" data-day="day-3">
+	<div class="talks trackFilter" data-day="day-3" >
 	
 		<div class="head">
 			<div class="grid">
