--- a/app/scheduleBody.hbr.html
+++ b/app/scheduleBody.hbr.html
@@ -52,7 +52,7 @@
 						<a href="#" class="button dataday" id="day-2Button">Tuesday</a>
 					</li>
 					<li>
-						<a href="#" class="button selected dataday" id="day-3Button">Wednesday</a>
+						<a href="#" class="button dataday" id="day-3Button">Wednesday</a>
 					</li>
 					<li>
 						<a href="#" class="button selected dataday" id="day-4Button">Thursday</a>
@@ -142,7 +142,7 @@
 	</div>
 
 
-	<div class="talks trackFilter" data-day="day-3" >
+	<div class="talks trackFilter" data-day="day-3" style="display: none;">
 	
 		<div class="head">
 			<div class="grid">
