--- a/app/index.html
+++ b/app/index.html
@@ -109,13 +109,13 @@
             <nav class="" ng-controller="LoginCtrl" ng-cloak="ng-cloak">
                 <ul>
                     <li><a href="#/">Home</a></li>
-                    <li class="submenu subleft">
-                        <a href="#">Program</a>
-                        <ul>
-                            <li><a href="/dv13-schedule.html">Schedule</a></li>
-                            <li><a href="/dv13-speakers.html">Devoxxians</a></li>
-                        </ul>
-                    </li>
+                    <!--<li class="submenu subleft">-->
+                        <!--<a href="#">Program</a>-->
+                        <!--<ul>-->
+                            <!--<li><a href="/dv13-schedule.html">Schedule</a></li>-->
+                            <!--<li><a href="/dv13-speakers.html">Devoxxians</a></li>-->
+                        <!--</ul>-->
+                    <!--</li>-->
                     <li class="submenu subright">
                         <a>Practical</a>
                         <ul>
@@ -125,9 +125,9 @@
                             <li><a href="#/contact">Contact</a></li>
                         </ul>
                     </li>
-                    <li class="btn hide_mobile">
-                    <a href="https://regbe.devoxx.com/public#DV13">SOLD OUT</a>
-                    </li>
+                    <!--<li class="btn hide_mobile">-->
+                        <!--<a href="https://regbe.devoxx.com/public#DV13">SOLD OUT</a>-->
+                    <!--</li>-->
                     <li class="btn popup login btn_grey" ng-hide="model.currentUser()" ng-class="{'open':model.loginRequested}">
                         <a>Login</a>
                         
@@ -255,6 +255,7 @@
 </footer>
 <div id="sponsors" class="white sponsors">
     <div class="grid">
+        <h4>Our 2013 Sponsors</h4>
         <div class="row">
             <div class="col5" align="center">
                 <a href="http://www.oracle.com/us/technologies/java/overview/index.html" target="_blank"><img
