--- a/app/cinemawall.html
+++ b/app/cinemawall.html
@@ -32,7 +32,10 @@
     <!-- build:js scripts/tweetwall.js -->
     <script src="components/jquery/jquery.js"></script>
     <script src="components/underscore/underscore-min.js"></script>
-    <script src="components/unstable-angular-complete/angular.js"></script>
+    <script src="components/angular/angular.js"></script>
+    <script src="components/angular-route/angular-route.js"></script>
+    <script src="components/angular-cookies/angular-cookies.js"></script>
+    <script src="scripts/config.js"></script>
     <script src="scripts/wall/date.js"></script>
     <script src="scripts/wall/md5.js"></script>
     <script src="scripts/wall/anim.js"></script>
